Second Commit Programa Web Clima

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,12 +7,19 @@
 
         <div class="col-6">
             
-            MADRID
+            {{ madrid }}  <br></br>
+
+            Madrid - 7.26°
 
         </div>
 
         <div class="col-6">
-           PARIS
+           
+            {{ paris }}   <br></br>
+
+            Paris - 9.41°
+
+
         </div>
 
     </div>
