--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,13 +10,20 @@
     <div class="row">
 
         <div class="col-6">
-            
-            Quito
+             
+            {{ quito }}  <br></br>
+
+            Quito - 19.15° 
 
         </div>
 
         <div class="col-6">
-           Guayaquil
+
+
+           {{ guayaquil}}  <br></br>
+
+             Guayaquil - 30°
+
         </div>
 
     </div>
